--- a/src/index.css
+++ b/src/index.css
@@ -15,11 +15,12 @@
 
 a {
   font-weight: 500;
-  color: #646cff;
+  color: #ff64d0;
   text-decoration: inherit;
 }
+
 a:hover {
-  color: #535bf2;
+  color: #b63295;
 }
 
 body {
@@ -46,12 +47,22 @@ button {
   cursor: pointer;
   transition: border-color 0.25s;
 }
+
 button:hover {
-  border-color: #646cff;
+  background-color: #ff64d0;
 }
+
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
+}
+
+
+select {
+  background-color: #da81bf;
+  border: none;
+  height: 30px;
+  width: fit-content;
 }
 
 @media (prefers-color-scheme: light) {
@@ -59,9 +70,11 @@ button:focus-visible {
     color: #213547;
     background-color: #ffffff;
   }
+
   a:hover {
     color: #747bff;
   }
+
   button {
     background-color: #f9f9f9;
   }
