🏰 [layout] 화장품 제품 목록 뷰 레이아웃 구현 컴포넌트 분리, 기능 보충 필요

--- a/src/components/SearchBar.css
+++ b/src/components/SearchBar.css
@@ -1,5 +1,18 @@
 input {
     border-style: none;
     border-radius: 0;
+    /* margin-bottom: 10px; */
+    width: 300px;
+    margin-right: 5px;
     height: 40px;
 }
+
+input::placeholder {
+    text-align: center;
+}
+
+.searchBar {
+    display: flex;
+    align-items: center;
+}
+
